# gull_api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker.env  echo_args.sh  example_cli.json  pyproject.toml
.github/workflows/: docker-publish.yml  pypi-publish.yml  run_test.yml  test.yml
gull_api/: __init__.py  config.py  db.py  main.py  run_gull_api.py
tests/: test_api.py  test_db.py  test_init.py  test_run_gull_api.py
