[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
name = "gull-api"
version = "0.1.0"
description = "A REST API for running Large Language Models"
authors = ["Michael Becker <michael.becker@uphs.upenn.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
httpx = "^0.24.1"
pydantic = "^1.10.9"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
